--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 		
 		<p>Hello World! Erin is here.</p>		
 
+<!--The following two lines code to insert images of my python and C++ code-->		
+	<img src="https://i.imgur.com/IhNA6Cj.png" alt="C++">
+	<img src="https://i.imgur.com/YHdvqD8.png" alt="Python">
+		
 	</div><!-- /content -->
 	
 	<footer class="w3-bottom w3-container w3-flat-carrot">
